# feincms

./: .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  QUICKSTART.rst  README  README.rst  TODO  admin.py  biome.json  models.py  package.json  quickstart.sh  requirements.txt  setup.cfg  setup.py  setuplib.py  tox.ini  views.py
.github/workflows/: e2e-tests.yml  selenium-tests.yml  tests.yml
.tx/: config
content/image/: admin.py  models.py
content/richtext/: admin.py  models.py
docs/: admin.rst  admin.txt  conf.py  contenttypes.rst  contenttypes.txt  contributing.rst  deprecation.rst  extensions.rst  faq.rst  faq.txt  howto-medialibrary.txt  howto-page.txt  howto.txt  index.rst  index.txt  infanta.txt  installation.rst  installation.txt  integration.rst  integration.txt  medialibrary.rst  medialibrary.txt  migrations.rst  overview.txt  page.rst  page.txt  pagecontent.txt  settings.rst  templatetags.rst  templatetags.txt  urlconfs-views.txt  versioning.rst
docs/advanced/: base.rst  caching.rst  caching.txt  designdecisions.rst  designdecisions.txt  index.rst  index.txt  navigationextensions.rst  navigationextensions.txt  prefilledattributes.rst  settings.rst  settings.txt  utils.rst  utils.txt
docs/api/: admin.rst  admin.txt  base.rst  base.txt  blog.txt  commands.rst  commands.txt  contenttypes.rst  contenttypes.txt  contextprocessors.rst  contextprocessors.txt  contrib.rst  contrib.txt  core.rst  index.rst  index.txt  medialibrary.rst  medialibrary.txt  page.rst  page.txt  settings.rst  settings.txt  shortcuts.rst  shortcuts.txt  templatetags.rst  templatetags.txt  translations.rst  translations.txt  utils.rst  utils.txt  views.rst  views.txt
docs/releases/: 1.10.rst  1.11.rst  1.12.rst  1.13.rst  1.2.rst  1.2.txt  1.3.rst  1.3.txt  1.4.rst  1.5.rst  1.6.rst  1.7.rst  1.8.rst  1.9.rst  index.txt
docs/tools/: index.txt  utils.txt
example/: README  admin.py  blog_urls.py  example.db  manage.py  models.py  settings.py  test_utils.py  urls.py
example/templates/: base.html  feincms_base.html
feincms/: __init__.py  _internal.py  admin.py  apps.py  compat.py  contents.py  context_processors.py  default_settings.py  extensions.py  fields.py  legacy.py  logging.py  models.py  settings.py  shortcuts.py  signals.py  tests.py  translations.py  urls.py  utils.py  views.py
feincms/admin/: __init__.py  editor.py  filters.py  filterspecs.py  item_editor.py  splitpane_editor.py  tree_editor.py  treelist_editor.py
feincms/apps/: __init__.py  contents.py  reverse.py
feincms/contrib/: django_tagging.py  fields.py  richtext.py  storage.py  tagging.py
feincms/extensions/: __init__.py  base.py  changedate.py  ct_tracker.py  datepublisher.py  featured.py  seo.py  translations.py
feincms/infanta/: __init__.py  context_processors.py  loader_tags.py  middleware.py  models.py
feincms/management/: checker.py
feincms/media/: helper.js  item_editor.js  itemeditor.js  jquery.alerts.js  jquery.contextmenu.r2.js  jquery.treeTable.js  listener.js  page_toolbox.js  (+5 more)
media/: helper.js  jquery.alerts.css  jquery.treeTable.js  layout.css  listener.js
templatetags/: feincms_navigation.py  feincms_tags.py
tests/: conftest.py  cov.sh  manage.py  requirements.txt  settings.py  tests.py  tox-update-venvs.sh  tox.ini
views/: base.py  decorators.py
(+304 files in other folders)
