[metadata]
name = FeinCMS
version = attr: feincms.__version__
description = Django-based Page CMS and CMS building toolkit.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/feincms/feincms/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    Django>=1.7
    Pillow>=2.0.0
    django-mptt>=0.7.1
    pytz>=2014.10
    six
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
zip_safe = False

[options.packages.find]
exclude = tests

[options.extras_require]
tests =
    coverage

[flake8]
exclude = venv,build,docs,.tox,migrations,migrate
ignore = E203,W503
max-line-length = 88

[wheel]
universal = 1

[coverage:run]
branch = True
include =
    *feincms*
omit =
    *migrations*
    *migrate*
    *tests*
    *.tox*

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2
